--- a/docker-laravel-app/docker-compose.yaml
+++ b/docker-laravel-app/docker-compose.yaml
@@ -30,8 +30,20 @@ services:
       dockerfile: composer.dockerfile
     volumes:
       - ./src:/var/www/html
-  # artisan:
-  # npm:
+  artisan:
+     build:
+      context: ./dockerfiles
+      dockerfile: php.dockerfile
+     volumes:
+      - ./src:/var/www/html
+     entrypoint: ["php", "/var/www/html/artisan"]
+     depends_on:
+       - mysql
+  npm:
+    image: node:14
+    entrypoint: ["npm"]
+    volumes:
+      - ./src:/var/www/html
 
 
 
