--- a/docker-laravel-app/docker-compose.yaml
+++ b/docker-laravel-app/docker-compose.yaml
@@ -1,8 +1,9 @@
-version: "3.8"
-
 services:
   server:
-    image: 'nginx:stable-alpine'
+    # image: 'nginx:stable-alpine'
+    build: 
+      context: .
+      dockerfile: dockerfiles/nginx.dockerfile
     ports:
       - '8000:80'
     volumes:
@@ -14,8 +15,8 @@ services:
 
   php:
     build:
-      context: ./dockerfiles
-      dockerfile: php.dockerfile
+      context: .
+      dockerfile: dockerfiles/php.dockerfile
     volumes:
       - ./src:/var/www/html:delegated
 
@@ -32,8 +33,8 @@ services:
       - ./src:/var/www/html
   artisan:
      build:
-      context: ./dockerfiles
-      dockerfile: php.dockerfile
+      context: .
+      dockerfile: dockerfiles/php.dockerfile
      volumes:
       - ./src:/var/www/html
      entrypoint: ["php", "/var/www/html/artisan"]
